--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h2>Profil Sayfası</h2>
-    <p><a href="{{ url_for('index') }}">Ana Sayfa</a> | <a href="{{ url_for('logout') }}">Çıkış Yap</a></p>
+    <p><a href="{{ url_for('main.index') }}">Ana Sayfa</a> | <a href="{{ url_for('main.logout') }}">Çıkış Yap</a></p>
     <p>Beğendiğiniz tarifler burada gösterilecek (şimdilik boş).</p>
 </body>
 </html>
