--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -7,13 +7,13 @@
 </head>
 <body>
 <nav>
-    <a href="{{ url_for('index') }}">Anasayfa</a>
+    <a href="{{ url_for('main.index') }}">Anasayfa</a>
     {% if current_user.is_authenticated %}
-        <a href="{{ url_for('profile') }}">Profil</a>
-        <a href="{{ url_for('logout') }}">Çıkış</a>
+        <a href="{{ url_for('main.profile') }}">Profil</a>
+        <a href="{{ url_for('main.logout') }}">Çıkış</a>
     {% else %}
-        <a href="{{ url_for('login') }}">Giriş</a>
-        <a href="{{ url_for('register') }}">Kayıt</a>
+        <a href="{{ url_for('lmain.ogin') }}">Giriş</a>
+        <a href="{{ url_for('main.register') }}">Kayıt</a>
     {% endif %}
 </nav>
 <div class="container">
