--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -19,7 +19,9 @@
         <div class="card border-success">
             <div class="card-body">
                 <h5 class="card-title text-success">{{ recipe.title }}</h5>
-                <p class="card-text"><b>Hazırlanışı:</b><br>{{ recipe.description }}</p>
+                <p class="card-text"><b>Hazırlanışı:</b><br>
+                    <pre class="mb-0">{{ recipe.description }}</pre>
+                </p>
                 <p class="card-text"><b>İçerik (Malzemeler):</b><br><pre class="mb-0">{{ recipe.content or 'İçerik bulunamadı.' }}</pre></p>
                 {% if current_user.is_authenticated %}
                     <form method="POST" action="{{ url_for('main.like', recipe_id=recipe.id) }}">
